test/CheckError/Templates/InvalidTypeInstanceTemplateVarType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class SomeClass() { }

// CHECK: .loci:7:11: error: template variable 'T' has non-primitive type 'SomeClass'
template <SomeClass T>
class TestClass() { }

// CHECK: 1 error generated.
